kubernetes/vpro-app/app-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-app
  labels: 
    app: dev-app
  namespace: example-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-app
  template:
    metadata:
      labels:
        app: dev-app
    spec:
      containers:
      - name: dev-app
        image: vprocontainers/vprofileapp
        ports: 
        - name: dev-app
          containerPort: 8080
