kubernetes/vpro-app/mysql-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-mysql
  labels:
    app: dev-mysql
  namespace: example-app
spec:
  selector:
    matchLabels:
      app: dev-mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: dev-mysql
    spec:
      containers:
      - name: dev-mysql
        image: vprofile/vprofiledb 
        ports:
        - name: dev-mysql-port
          containerPort: 3306
