kubernetes/vpro-app/rabbitmq-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-rabbitmq
  labels:
    app: dev-rabbitmq
  namespace: example-app
spec:
  selector:
    matchLabels:
      app: dev-rabbitmq
  replicas: 1
  template:
    metadata:
      labels:
        app: dev-rabbitmq
    spec:
      containers:
      - name: dev-rabbitmq
        image: rabbitmq
        ports:
        - name: dev-rabbitmq-port
          containerPort: 5672
