kubernetes/vpro-app/app-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: dev-app-svc
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: dev-app
  type: ClusterIP
