kubernetes/vpro-app/memcached-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: dev-memcached-svc
spec:
  ports:
  - port: 11211
    targetPort: dev-memcached-port
    protocol: TCP
  selector:
    app: dev-memcached
  type: ClusterIP
