kubernetes/vpro-app/mysql-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: dev-mysql-svc
  namespace: example-app
spec:
  ports:
  - port: 3306
    targetPort: dev-mysql-port
    protocol: TCP
  selector:
    app: vprodb
  type: ClusterIP
