kubernetes/vpro-app/rabbitmq-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: dev-rabbitmq-svc
spec:
  ports:
  - port: 5672
    targetPort: dev-rabbitmq-port
    protocol: TCP
  selector:
    app: dev-rabbitmq-svc
  type: ClusterIP
