kubernetes/vpro-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
  namespace: example-app
spec:
  ingressClassName: nginx
  rules:
  - host: dev.kameyoko.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dev-app-svc
            port:
              number: 8080
